--- a/index.html
+++ b/index.html
@@ -1,55 +1,58 @@
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bible Answer Search</title>
-    <!-- Load Tailwind CSS for modern, responsive styling -->
+    <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-
-    <!-- Link to the external custom stylesheet -->
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body class="bg-gray-50">
-    <div class="w-full max-w-lg bg-white rounded-xl shadow-2xl p-6 md:p-8">
-      <header class="text-center mb-6">
-        <h1 class="text-3xl font-extrabold text-indigo-700">
-          Bible Answer Search
+    <!-- Load Custom Stylesheet -->
+    <link rel="stylesheet" href="style.css">
+    <style>
+        /* Configure Tailwind to use Inter font and apply some base styles */
+        body { font-family: 'Inter', sans-serif; }
+    </style>
+</head>
+<body class="bg-gray-50">
+    <div id="quiz-container" class="w-full max-w-2xl bg-white p-6 md:p-10 rounded-xl shadow-2xl mt-8">
+        <h1 class="text-4xl font-bold text-center text-blue-800 mb-6">
+            Bible Answer Lookup
         </h1>
-        <p class="text-gray-500 mt-2">
-          Find answers quickly by searching keywords in the question database.
-        </p>
-      </header>
 
-      <div id="search-container" class="flex flex-col space-y-4">
-        <input
-          type="text"
-          id="search-input"
-          placeholder="e.g., 'first king' or 'swallowed fish'"
-          class="w-full p-3 border-2 border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-150"
-        />
-        <button
-          id="search-btn"
-          class="w-full bg-blue-600 text-white font-semibold py-3 rounded-lg shadow-md transition duration-200 ease-in-out hover:bg-blue-700 active:bg-blue-800"
-        >
-          Search for Answer
-        </button>
-      </div>
+        <!-- Status and Diagnostic Area -->
+        <div id="status-display" class="mb-4 p-3 rounded-lg text-sm bg-gray-100 border border-gray-300">
+            Current Status: Initializing...
+        </div>
 
-      <div id="loading-indicator" class="mt-6 text-center text-gray-500 hidden">
-        Loading questions...
-      </div>
+        <!-- Search Input and Button -->
+        <div class="flex flex-col md:flex-row gap-4 mb-8">
+            <input 
+                type="text" 
+                id="search-input" 
+                placeholder="e.g., 'first king' or 'who was swallowed by a fish'"
+                class="flex-grow p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 shadow-sm"
+            >
+            <button 
+                id="search-btn" 
+                class="px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 transition duration-300 ease-in-out"
+            >
+                Search for Answer
+            </button>
+        </div>
 
-      <div id="results-container" class="mt-6">
-        <p
-          class="text-center text-gray-500 p-4 border border-dashed border-gray-300 rounded-lg"
-        >
-          Your search results will appear here.
-        </p>
-      </div>
+        <!-- Loading Indicator -->
+        <div id="loading-indicator" class="hidden text-center text-blue-500 font-medium">
+            <div class="animate-spin inline-block w-6 h-6 border-4 border-blue-300 border-t-blue-600 rounded-full"></div>
+            <p class="mt-2">Loading question data...</p>
+        </div>
+
+        <!-- Results Display Area -->
+        <div id="results-container">
+            <!-- Search results will appear here -->
+        </div>
     </div>
-
-    <!-- The script files are linked here -->
-    <!-- The JSON file will be fetched by script.js -->
+    
+    <!-- Scripts -->
     <script src="script.js"></script>
-  </body>
+</body>
 </html>
