--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
         </div>
     </div>
     
-    <!-- Scripts: Note the order: data.js MUST load before script.js -->
-    <script src="data.js"></script>
+    <!-- Scripts: Note the order: questions.js MUST load before script.js -->
+    <script src="questions.js"></script>
     <script src="script.js"></script>
-</body>
-</html>
-
